add new file change for ai review

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">CodeReviewByAIBot</string>
+    <string name="app_name">Burgerheart</string>
+    <string name="celebrity">Celebrity</string>
+    <string name="user">User</string>
 </resources>
